add animation vendor prefixes

--- a/src/styles/vars.colors.less
+++ b/src/styles/vars.colors.less
@@ -37,6 +37,7 @@
 
 /* Text colors */
 
+@color-grey:                    #444444;
 @color-body-text:               #000000;  /* PRINT SCREENSHOTS: black */
 @color-display-text:            #222222;
 @color-muted-text:              #888888;
