--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -30,6 +30,8 @@
 body {
     color: @color-body-text;
     font-family: Varela, sans-serif;
+    font-feature-settings: "kern" on;
+    font-kerning: normal;
     font-size: 100%;
     line-height: 1.5;
 }
