--- a/src/styles/vars.colors.less
+++ b/src/styles/vars.colors.less
@@ -42,11 +42,13 @@
 @color-display-text:            #222222;
 @color-muted-text:              #888888;
 @color-grey-text:               #bbbbbb;
+@color-dark-grey-text:          #666666;
 @color-headings:                @color-orange;
 
 /* Background colors */
 
 @color-block-background:        #F5F5F5;
+@color-block-medium-background: #E7E7E7;
 @color-block-dark-background:   #E0E0E0;
 
 /* Accent colors */
