eliminate horizontal scrolling in code blocks

--- a/src/styles/code.less
+++ b/src/styles/code.less
@@ -2,7 +2,11 @@
  * Styles for source code.
  */
 
-pre.sourceCode > code {
+code, kbd, pre, samp {
+	font-size: 0.95em;
+}
+
+pre.sourceCode.bash {
     padding-left: 0.5em;
 }
 
