--- a/src/styles/vars.colors.less
+++ b/src/styles/vars.colors.less
@@ -47,6 +47,7 @@
 
 /* Background colors */
 
+@color-background:              #FFFFFF;
 @color-block-background:        #F5F5F5;
 @color-block-medium-background: #E7E7E7;
 @color-block-dark-background:   #E0E0E0;
