--- a/src/styles/nav.less
+++ b/src/styles/nav.less
@@ -82,6 +82,16 @@ nav {
   }
 }
 
+.headroom {
+    transition: transform 200ms linear;
+}
+.headroom--pinned {
+    transform: translateY(0%);
+}
+.headroom--unpinned {
+    transform: translateY(-100%);
+}
+
 main {
     margin-top: @nav-height + @nav-padding;
 }
