reorganize appendices; appendix A tech review

--- a/src/styles/figures.less
+++ b/src/styles/figures.less
@@ -32,8 +32,7 @@ span.lastfigure:before {
 }
 
 .appendix figcaption:before {
-    font-family: varela-smcp, sans-serif;
-    content: "Figure " counter(appendix, lower-alpha) "‒" counter(figures) ". ";
+    content: "Figure " counter(appendix, upper-alpha) "‒" counter(figures) ". ";
 }
 
 .appendix span.nextfigure:before {
