set up for HTML presentations

--- a/src/styles/styles.index.less
+++ b/src/styles/styles.index.less
@@ -11,6 +11,9 @@
 /* Primary stylesheets */
 @import "vars.colors.less";
 @import "vars.shapes.less";
+
+@font-folder: "../fonts"; 
+
 @import "typography.less";
 @import "layout.less";
 
