--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -12,6 +12,9 @@
 /* Primary stylesheets */
 @import "vars.colors.less";
 @import "vars.shapes.less";
+
+@font-folder: "../fonts"; 
+
 @import "typography.less";
 @import "brand.less";
 @import "layout.less";
