--- a/src/styles/vars.colors.less
+++ b/src/styles/vars.colors.less
@@ -51,6 +51,7 @@
 @color-block-background:        #F5F5F5;
 @color-block-medium-background: #E7E7E7;
 @color-block-dark-background:   #E0E0E0;
+@color-dark-background:         dimgray;
 
 /* Accent colors */
 @color-border:                  #d0d0d0;
