restructure talk scaffolding

--- a/src/styles/styles.talks.less
+++ b/src/styles/styles.talks.less
@@ -12,7 +12,7 @@
 @import "vars.colors.less";
 @import "vars.shapes.less";
 
-@font-folder: "../../fonts"; 
+@font-folder: "../fonts"; 
 
 @import "typography.less";
 @import "brand.less";
