--- a/src/styles/slides.less
+++ b/src/styles/slides.less
@@ -99,3 +99,7 @@ figure > * {
 figure > img, figure > video {
   width: 100%; height: 100%;
 }
+
+
+.photoslide h1 { color: white; text-shadow: 3px 3px 5px dimgray; }
+
