continued work on slide tools

--- a/src/styles/slides.less
+++ b/src/styles/slides.less
@@ -61,7 +61,7 @@ section[aria-selected] ~ section { left: +150%; }
 .incremental > * { opacity: 1; }
 
 /* The current item */
-.incremental > *[aria-selected] { color: red; opacity: 1; }
+.incremental > *[aria-selected] { color: @color-red; opacity: 1; }
 
 /* The items to-be-selected */
 .incremental > *[aria-selected] ~ * { opacity: 0.2; }
@@ -101,5 +101,16 @@ figure > img, figure > video {
 }
 
 
-.photoslide h1 { color: white; text-shadow: 3px 3px 5px dimgray; }
+// Customizations
 
+.incremental {visibility: visible; opacity: 0.2; }
+.incremental[active] {opacity: 1.2;  }
+
+
+.photoslide h1 { color: white; text-shadow: 3px 3px 5px dimgray; }
+li { padding-bottom: 0.5em;}
+.codewrapper {overflow-y:scroll;overflow-x:hidden;max-height:494px;max-width:800px}
+.codewrapper pre {padding-top: 0; padding-bottom:0; margin-top: 0; margin-bottom:0}
+.codewrapper table {padding:0; margin-bottom:0; border:none}
+.codewrapper table.sourceCode td.lineNumbers pre {width:auto;padding-left:0;padding-right:0}
+.codewrapper table.sourceCode td.sourceCode {padding-left:0.1em; padding-right:0}
