continue work on talks

--- a/src/styles/slides.less
+++ b/src/styles/slides.less
@@ -114,3 +114,4 @@ li { padding-bottom: 0.5em;}
 .codewrapper table {padding:0; margin-bottom:0; border:none}
 .codewrapper table.sourceCode td.lineNumbers pre {width:auto;padding-left:0;padding-right:0}
 .codewrapper table.sourceCode td.sourceCode {padding-left:0.1em; padding-right:0}
+.codewrapper table.sourceCode pre code .emphasized {margin-left:-1em;padding-left:1em;}
