remove search because of error

--- a/src/styles/search.less
+++ b/src/styles/search.less
@@ -6,15 +6,15 @@
     padding-right: 20px;
 }
 
-#search input[type=search] {
-    font-size: 12px;
-    padding: 4px 9px 4px 27px;
-    height: 20px;
-    width: 200px;
-    color: #666;
-    border: 1px solid #ccc;
-    border-radius: 15px;
-    box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.17);
-    outline: none;
-    background: #fcfcfc url(//s.swiftypecdn.com/assets/embed_mag-115e233edebef5dbcde4c557157b625c.png) no-repeat 7px 7px;
-}
+// #search input[type=search] {
+//     font-size: 12px;
+//     padding: 4px 9px 4px 27px;
+//     height: 20px;
+//     width: 200px;
+//     color: #666;
+//     border: 1px solid #ccc;
+//     border-radius: 15px;
+//     box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.17);
+//     outline: none;
+//     background: #fcfcfc url(//s.swiftypecdn.com/assets/embed_mag-115e233edebef5dbcde4c557157b625c.png) no-repeat 7px 7px;
+// }
