--- a/src/styles/slides.less
+++ b/src/styles/slides.less
@@ -110,8 +110,8 @@ figure > img, figure > video {
 .photoslide h1 { color: white; text-shadow: 3px 3px 5px dimgray; }
 li { padding-bottom: 0.5em;}
 .codewrapper {overflow-y:scroll;overflow-x:hidden;max-height:494px;max-width:800px}
-.codewrapper pre {padding-top: 0; padding-bottom:0; margin-top: 0; margin-bottom:0}
-.codewrapper table {padding:0; margin-bottom:0; border:none}
-.codewrapper table.sourceCode td.lineNumbers pre {width:auto;padding-left:0;padding-right:0}
-.codewrapper table.sourceCode td.sourceCode {padding-left:0.1em; padding-right:0}
-.codewrapper table.sourceCode pre code .emphasized {margin-left:-1em;padding-left:1em;}
+.slide pre {padding-top: 0; padding-bottom:0; margin-top: 0; margin-bottom:0}
+.slide table {padding:0; margin-bottom:0; border:none}
+.slide table.sourceCode td.lineNumbers pre {width:auto;padding-left:0;padding-right:0}
+.slide table.sourceCode td.sourceCode {padding-left:0.1em; padding-right:0}
+.slide table.sourceCode pre code .emphasized {margin-left:-1em;padding-left:1em;}
