--- a/src/styles/styles.visuals.less
+++ b/src/styles/styles.visuals.less
@@ -17,6 +17,7 @@
 @import "typography.less";
 @import "layout.less";
 @import "simplenav.less";
+@import "code.less";
 
 /* Specific styles just for index.html */
 
@@ -46,6 +47,15 @@ main > ul {
             margin: 6px 20px 6px 0;
         }
     }
+}
+
+main > time {
+    font-style: italic;
+}
+
+iframe {
+    border: none;
+    margin-bottom: 3em;
 }
 
 @media (max-width: 740px) {
