--- a/src/styles/styles.visuals.less
+++ b/src/styles/styles.visuals.less
@@ -1,5 +1,5 @@
 /*
- * Stylesheet for landing page
+ * Stylesheet for visuals page
  */
 
 /* Third-party stylesheets */
@@ -19,7 +19,7 @@
 @import "simplenav.less";
 @import "code.less";
 
-/* Specific styles just for index.html */
+/* Specific styles just for visuals.html */
 
 body { padding-top: 1em; }
 
