updated visualizations page

--- a/src/styles/styles.visuals.less
+++ b/src/styles/styles.visuals.less
@@ -58,6 +58,10 @@ iframe {
     margin-bottom: 3em;
 }
 
+.MathJax {
+    padding-left: 30px !important;
+}
+
 @media (max-width: 740px) {
   h1 {
     margin-left: 1em;
