darken visited links on hover/focus

--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -64,6 +64,10 @@ a:hover, a:focus {
     color: @color-red;
     background-image: linear-gradient(to top, transparent, transparent 2px, mix(@color-red,@color-grey-text,90%) 2px, mix(@color-red,@color-grey-text,90%) 3px, transparent 3px);
 }
+a:visited:hover, a:visited:focus {
+    color: @color-red-darkest;
+    background-image: linear-gradient(to top, transparent, transparent 2px, mix(@color-red-darkest,@color-grey-text,90%) 2px, mix(@color-red-darkest,@color-grey-text,90%) 3px, transparent 3px);
+}
 blockquote {
     border-left: 2px solid #ccc;
     margin: 0 2em 0 1em;
