--- a/src/styles/typography.less
+++ b/src/styles/typography.less
@@ -53,6 +53,11 @@ figure {
 @media screen and (max-width: 25em) {
   body { font-size: 90%; }
 }
+p em {
+    font-style: normal;
+    transform: skewX(-8deg);
+    display: inline-block;
+}
 a {
     color: @color-body-text;
     text-decoration: none;
